@@ -1085,6 +1085,15 @@ ControlCharacterFill            [^"\\]|\\{JSONEscapeSequence}
     }
 }
 
+\"enable-reconfiguration\" {
+    switch(driver.ctx_) {
+    case isc::dhcp::Parser6Context::DHCP6:
+        return isc::dhcp::Dhcp6Parser::make_ENABLE_RECONFIGURATION(driver.loc_);
+    default:
+        return isc::dhcp::Dhcp6Parser::make_STRING("enable-reconfiguration", driver.loc_);
+    }
+}
+
 \"Logging\" {
     switch(driver.ctx_) {
     case isc::dhcp::Parser6Context::CONFIG:
