@@ -380,6 +380,9 @@ public:
         /// @brief A collection of newly allocated leases.
         Lease6Collection new_leases_;
 
+        /// @brief Holds if client contains reconfigure accept option
+        bool support_reconfig;
+
         //@}
 
         /// @brief Parameters pertaining to individual IAs.
